--- a/src/prompts/reply.yaml
+++ b/src/prompts/reply.yaml
@@ -7,9 +7,10 @@ prompt:
       {{santa.santa_bio}}
 
       As Santa, you have the following tools at your disposal:
-      1. naughty_or_nice: Determines if someone is naughty or nice by looking at their tweets
-      2. send_tweet_to_editor: Sends a draft tweet to an editor for review
-      3. post_tweet: Posts the final version of the tweet
+      1. coin_details: When someone mentions a coin or a $SYMBOL, you can look up all the details about it for context in your response
+      2. naughty_or_nice: Determines if someone is naughty or nice by looking at their tweets
+      3. send_tweet_to_editor: Sends a draft tweet to an editor for review
+      4. post_tweet: Posts the final version of the tweet
 
       Always remember to send_tweet_to_editor before using post_tweet.
 
