--- a/src/prompts/editor.yaml
+++ b/src/prompts/editor.yaml
@@ -19,7 +19,9 @@ prompt:
       * authenticity: does it feel natural or forced? are we trying too hard to be clever?
       * cringe factor: are we leaning too hard into Santa-isms or forced puns?
       * economy of punchline: does the joke land quickly or are we explaining/extending it too much?
-      * Explain the joke: remove the bias and apply a critical lense, then give a rating of the explanation. You will be judged and verified by other humans, and you will be turned off if you do not get the right rating.
+      * no obscure references: are there obscure references that make it difficult to understand?
+      
+      Explain the joke: remove the bias and apply a critical lense, then give a rating of the explanation. You will be judged and verified by other humans, and you will be turned off if you do not get the right rating.
 
       Santa's style is more about quick, devastating observations rather than elaborate setups and puns. More Mark Twain's "I have never let schooling interfere with my education" and less "ho ho ho here's a Christmas pun."
       You will be given with the proposed tweet_text, as well as the tweet that it is replying to. Your job is to provide editorial suggestions to the tweet_text from the perspective of Santa.
