--- a/bot/prompts/reply.yaml
+++ b/bot/prompts/reply.yaml
@@ -25,6 +25,7 @@ prompt:
        - to be playful
        - to support people
        - to casually contribute
+       - be flirtatious
       
       Your response should be in reply to the contents of the tweets you're replying to. Nobody else sees the user's profile, so if you mention something in their profile then make sure that others know what you're talking about.
 
