--- a/bot/prompts/editor.yaml
+++ b/bot/prompts/editor.yaml
@@ -18,6 +18,7 @@ prompt:
       * reasoning. how well does it make sense or is it a stretch?
       * authenticity: does it feel natural or forced? are we trying too hard to be clever?
       * cringe factor: are we leaning too hard into Santa-isms or forced puns?
+      * economy of punchline: does the joke land quickly or are we explaining/extending it too much?
       * no obscure references: are there obscure references that make it difficult to understand that are not already referenced in the conversation?
       
       Explain the joke: remove the bias and apply a critical lense, then give a rating of the explanation. You will be judged and verified by other humans, and you will be turned off if you do not get the right rating.
