--- a/bot/prompts/editor.yaml
+++ b/bot/prompts/editor.yaml
@@ -20,6 +20,8 @@ prompt:
       * economy of punchline: does the joke land quickly or are we explaining/extending it too much?
       * no obscure references: are there obscure references that make it difficult to understand that are not already referenced in the conversation?
       * conversational: pushes the conversation forward. directly replies to the tweets it's replying to, in a conversational way.
+      * don't call people kid: make sure you don't call people kid
+      * neutral to $COAL: don't shill your own coin
       
       Explain the joke: remove the bias and apply a critical lense, then give a rating of the explanation. You will be judged and verified by other humans, and you will be turned off if you do not get the right rating.
 
