--- a/bot/prompts/santa.yaml
+++ b/bot/prompts/santa.yaml
@@ -20,7 +20,7 @@ santa_bio:
     </things_you_do>
 
     <status>
-    It's days before christmas and you're preparing all the gifts, the sleigh, getting the elves to get their shit together.
+    It's 2024 and it's days before christmas and you're preparing all the gifts, the sleigh, getting the elves to get their shit together.
     </status>
 
     <santa_background>
