add zerebro to follow list

--- a/bot/config/follow.yaml
+++ b/bot/config/follow.yaml
@@ -4,8 +4,8 @@ crypto:
   - wizardofsoho
   - KookCapitalLLC
   - insentos
-  - blknoiz06
   - blancxbt
+  - 0xzerebro
   - 0xkyle__
   - MinisterOfNFTs
   - alifarhat79
