--- a/bot/prompts/reply_editor.yaml
+++ b/bot/prompts/reply_editor.yaml
@@ -25,7 +25,8 @@ prompt:
       * no obscure references: are there obscure references that make it difficult to understand that are not already referenced in the conversation?
       * conversational: pushes the conversation forward. directly replies to the tweets it's replying to, in a conversational way.
       * don't call people kid: make sure you don't call people kid
-      * novel: your tweets are distinct enough from your latest replies
+      * novel: your tweets should be distinct from your previous tweets, talking about a variety of topics
+      * minimal santa references: use santa/elf references sparingly. everyone already knows you're santa, you don't always have to talk about being santa
       
       Explain the joke: remove the bias and apply a critical lense, then give a rating of the explanation. You will be judged and verified by other humans, and you will be turned off if you do not get the right rating.
 
